--- a/.gitmodules
+++ b/.gitmodules
@@ -316,3 +316,6 @@
 [submodule "Easy/8e0d63bccabcef506dfeb6d0ae89b8fd"]
 	path = Easy/challenge-141-2
 	url = https://gist.github.com/8e0d63bccabcef506dfeb6d0ae89b8fd.git
+[submodule "Easy/d6b9ab881b4cb6f52e5635ad0e86d988"]
+	path = Easy/challenge-142
+	url = https://gist.github.com/d6b9ab881b4cb6f52e5635ad0e86d988.git
