--- a/.gitmodules
+++ b/.gitmodules
@@ -346,3 +346,6 @@
 [submodule "Easy/880a89492688d9d08d4043b85e9e6327"]
 	path = Easy/challenge-159
 	url = https://gist.github.com/880a89492688d9d08d4043b85e9e6327.git
+[submodule "Easy/af3fa2166fe351ee9c633d35ad29053d"]
+	path = Easy/af3fa2166fe351ee9c633d35ad29053d
+	url = https://gist.github.com/af3fa2166fe351ee9c633d35ad29053d.git
