--- a/.gitmodules
+++ b/.gitmodules
@@ -356,5 +356,5 @@
 	path = Easy/challenge-163
 	url = https://gist.github.com/f31597acf82066ce625be5ea0f4d21fe.git
 [submodule "Easy/bd9d1383fa2a571dcd5e0a8ad464ac23"]
-	path = Easy/bd9d1383fa2a571dcd5e0a8ad464ac23
+	path = Easy/challenge-165
 	url = https://gist.github.com/bd9d1383fa2a571dcd5e0a8ad464ac23.git
