--- a/.gitmodules
+++ b/.gitmodules
@@ -359,5 +359,5 @@
 	path = Easy/challenge-165
 	url = https://gist.github.com/bd9d1383fa2a571dcd5e0a8ad464ac23.git
 [submodule "Easy/3cbe16778e0345debf5dbaa272a0fdcf"]
-	path = Easy/3cbe16778e0345debf5dbaa272a0fdcf
+	path = Easy/challenge-166b
 	url = https://gist.github.com/3cbe16778e0345debf5dbaa272a0fdcf.git
