--- a/.gitmodules
+++ b/.gitmodules
@@ -362,5 +362,5 @@
 	path = Easy/challenge-166b
 	url = https://gist.github.com/3cbe16778e0345debf5dbaa272a0fdcf.git
 [submodule "Easy/65ba18f5abc46d32d16acc84a2a36216"]
-	path = Easy/65ba18f5abc46d32d16acc84a2a36216
+	path = Easy/challenge-167
 	url = https://gist.github.com/65ba18f5abc46d32d16acc84a2a36216.git
