--- a/.gitmodules
+++ b/.gitmodules
@@ -376,3 +376,6 @@
 [submodule "Easy/f348df76ba89c9b3ba8d2d2577e4db80"]
 	path = Easy/challenge-172
 	url = https://gist.github.com/f348df76ba89c9b3ba8d2d2577e4db80.git
+[submodule "Easy/30699f9f6ee57b3a2757546c999878cb"]
+	path = Easy/challenge-173
+	url = https://gist.github.com/30699f9f6ee57b3a2757546c999878cb.git
