--- a/.gitmodules
+++ b/.gitmodules
@@ -382,3 +382,6 @@
 [submodule "Easy/4e8d5d89749c02b76f4efb4466c43549"]
 	path = Easy/challenge-174
 	url = https://gist.github.com/4e8d5d89749c02b76f4efb4466c43549.git
+[submodule "Easy/0b65dfda814b4a3c51d6e5a71bd06c38"]
+	path = Easy/challenge-175
+	url = https://gist.github.com/0b65dfda814b4a3c51d6e5a71bd06c38.git
