--- a/.gitmodules
+++ b/.gitmodules
@@ -394,3 +394,6 @@
 [submodule "Easy/19dc57fe3f768e33d4f4179ccb469f96"]
 	path = Easy/challenge-187
 	url = https://gist.github.com/19dc57fe3f768e33d4f4179ccb469f96.git
+[submodule "Easy/3d08871ff8907ee3712fa78c0660df03"]
+	path = Easy/challenge-191
+	url = https://gist.github.com/3d08871ff8907ee3712fa78c0660df03.git
