--- a/.gitmodules
+++ b/.gitmodules
@@ -400,3 +400,6 @@
 [submodule "Easy/9410989ac71a8417ea7b2849819e5871"]
 	path = Easy/challenge-193
 	url = https://gist.github.com/9410989ac71a8417ea7b2849819e5871.git
+[submodule "Easy/7eede9e3d9bef2ad8864bb4c7f406bec"]
+	path = Easy/challenge-196
+	url = https://gist.github.com/7eede9e3d9bef2ad8864bb4c7f406bec.git
