--- a/.gitmodules
+++ b/.gitmodules
@@ -406,3 +406,6 @@
 [submodule "Easy/53f758d7b994e814cff41a728233e133"]
 	path = Easy/challenge-197
 	url = https://gist.github.com/53f758d7b994e814cff41a728233e133.git
+[submodule "Easy/240fba4574c52452eddc56e8f1722b42"]
+	path = Easy/challenge-201
+	url = https://gist.github.com/240fba4574c52452eddc56e8f1722b42.git
