--- a/.gitmodules
+++ b/.gitmodules
@@ -412,3 +412,6 @@
 [submodule "Easy/87871ad6a113660ac110c68a0e64cdb0"]
 	path = Easy/challenge-202
 	url = https://gist.github.com/87871ad6a113660ac110c68a0e64cdb0.git
+[submodule "Easy/bc2878cda572c2cfe27ec1f54c18d833"]
+	path = Easy/challenge-203
+	url = https://gist.github.com/bc2878cda572c2cfe27ec1f54c18d833.git
