--- a/.gitmodules
+++ b/.gitmodules
@@ -469,3 +469,6 @@
 [submodule "Easy/5b2a8e9d07493930781569feb7fe2b14"]
 	path = Easy/challenge-249
 	url = https://gist.github.com/5b2a8e9d07493930781569feb7fe2b14.git
+[submodule "Easy/274e00df940ce8d838c4c9d03f531231"]
+	path = Easy/challenge-254
+	url = https://gist.github.com/274e00df940ce8d838c4c9d03f531231.git
